fill board before using it